--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1>Eu sou a<span></span></h1>
                 <h1>Cíntia.<span></span></h1>
                 <em>Bem vindo ao meu mundo &lt;/&gt;<span></span></em>
-                <a href="#" type="button" class="cta">Portifolio</a>
+                <a href="https://github.com/Tofuzinha" type="button" class="cta">Portifolio</a>
             </div>
         </div>
     </section>
@@ -133,7 +133,7 @@
                         <p>Feita em html, css e javascript. Modelo padrão informativo ou de divulgação. Possui um sessões comum bem simples e limpa e carrossel em imagens feito em css e js.</p>
                     </div>
                     <div class="project-img">
-                        <a href="https://tofuzinha.github.io/kroton-lp/" target="_black"><img src="img/projeto-3.jpeg" alt="img"></a>
+                        <a href="https://tofuzinha.github.io/kroton-lp/" target="_black"><img src="img/projeto-4.jpeg" alt="img"></a>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                 O que busco?
                 Aprender e evoluir as softs e hards skills cada vez mais para me tornar uma ótima desenvolvedora e consiga resolver os problemas. Adquirir conhecimentos para revolucionar cada vez mais.
                 </p>
-                <a href="#" class="cta">Download Resume</a>
+                <a href="https://github.com/Tofuzinha?tab=repositories" class="cta">Meu Repositório</a>
             </div>
 
         </div>
