--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="col-right">
                 <h1 class="section-title">Sobre<span>mim</span></h1>
                 <h2>Front End Developer</h2>
-                <p>Oii, sou nova recruta e estou tentando migrar para a área de programação há 1 ano que estudo. Sempre tive intesse na área de tecnlogia.A tecnologia me chamou ainda mais, sentia que algo faltava, então fui conhecer a famosa marcação web (html), dai pra frente fui só me interessando cada vez mais. E finalmente achei o que gosto de fazer, realizar desafios e conseguir resolver problemas, sempre deixa a sensação de felicidade por dentro, claro que sempre tem o momento que te deixa frustado, mas a melhor parte é quando consegue superar tudo.
+                <p>Oii, sou nova recruta e estou tentando migrar para a área de programação há 1 ano que estudo. Sempre tive interesse na área de tecnologia, sentia que algo faltava, então fui conhecer a famosa marcação web (html), dai pra frente fui só me interessando cada vez mais. E finalmente achei o que gosto de fazer, realizar desafios e conseguir resolver problemas, sempre deixa a sensação de felicidade por dentro, claro que sempre tem o momento que te deixa frustado, mas a melhor parte é quando consegue superar tudo.
                 <br>
                 Bom faço faculdade de Analise e desenvolvimento de sistema na UNOPAR. Estou no segundo semestre e consegui um ótimo estágio na Kroton, onde estou tendo a oportunidade de aprender a me desenvolver mais.    
                 <br>
@@ -213,7 +213,7 @@
         <div class="footer container">
             <div class="brand">
                 <h1> <span>C</span>intia <span>S</span>ouza</h1></div>
-            <h2>Developer Junior</h2>
+            <h2>Desenvolvedora Front End</h2>
             <div class="social-icon">
                 <div class="social-item">
                     <a href="https://twitter.com/Cinthya_Midori"><img src="img/icon-twitter.png" alt="instagram"></a>
